// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListItem> is focused when the index is the focusIndex 1`] = `
<div
  aria-checked="true"
  className="FilteredList--ListItem is-focused"
  onClick={[Function]}
  role="switch"
  style={Object {}}
>
  a
</div>
`;

exports[`<ListItem> is selected when options[index] == selectedValue 1`] = `
<div
  aria-checked="false"
  className="FilteredList--ListItem is-selected"
  onClick={[Function]}
  role="switch"
  style={Object {}}
>
  a
</div>
`;

exports[`<ListItem> renders without exploding 1`] = `
<div
  aria-checked="false"
  className="FilteredList--ListItem"
  onClick={[Function]}
  role="switch"
  style={Object {}}
>
  a
</div>
`;
